--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "ejs": "~2.3.1",
     "express": "~4.12.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.9.1"
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
   }
 }
