--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": {
+    "name": "zhe hu",
+    "email": "286808713@qq.com"
+  },
   "dependencies": {
     "amazeui-react": "^1.0.1",
     "body-parser": "~1.12.4",
