--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
     "express": "~4.12.4",
+    "express-session": "^1.13.0",
     "morgan": "~1.5.3",
     "mysql": "^2.10.2",
     "mysql-queues": "^1.0.0",
