--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql-queues": "^1.0.0",
     "nodemailer": "^2.3.2",
     "serve-favicon": "~2.2.1",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "multiparty": "^4.1.2"
   },
   "devDependencies": {
 
