--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "h5Chat",
+  "name": "h5chat",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,19 +12,20 @@
   "dependencies": {
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.1",
-    "express": "~4.12.4",
-    "express-session": "^1.13.0",
+    "http-errors": "^1.6.1",
+    "koa": "^2.3.0",
+    "koa-logger": "^3.0.0",
+    "koa-router": "^7.2.1",
+    "koa-static": "^3.0.0",
     "morgan": "~1.5.3",
-    "mysql": "^2.10.2",
+    "multiparty": "^4.1.2",
+    "mysql": "^2.13.0",
     "mysql-queues": "^1.0.0",
     "nodemailer": "^2.3.2",
     "serve-favicon": "~2.2.1",
-    "socket.io": "^1.4.5",
-    "multiparty": "^4.1.2"
+    "socket.io": "^1.7.4"
   },
   "devDependencies": {
-
+    "debug": "^2.6.8"
   }
 }
