--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "http-errors": "^1.6.1",
+    "kcors": "^2.2.1",
     "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.0.0",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
