--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "colors": "^1.1.2",
     "cookie-parser": "~1.3.5",
     "http-errors": "^1.6.1",
     "kcors": "^2.2.1",
