--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceRoot}/bin/www"
+            "program": "${workspaceRoot}/server/bin/www"
         }
     ]
 }
